fix spacing in .vertical-list heading

--- a/static/style.css
+++ b/static/style.css
@@ -188,6 +188,9 @@ a {
     margin: 0 0 0.2em;
     padding: 0;
 }
+.vertical-list.compact .heading {
+    margin: 0;
+}
 
 .dotted {
     border: dashed 1px;
